[package]
name = "chaos_rust"
version = "0.1.0"
authors = ["RW21 <rinze.watanabe.translation@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.12"
rand = "0.8.0"
num_cpus = "1.13.0"
threadpool = "1.8.1"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
]